Fix `taskDisplay` stylesheet to align the text on the center.

--- a/client-angular/src/app/task-display/task-display.component.css
+++ b/client-angular/src/app/task-display/task-display.component.css
@@ -4,6 +4,7 @@
 }
 
 .task-description {
+  text-align: center;
   display: inline-block;
   width: 100%;
 }
